fixed overflow scrolling on card anim

--- a/components/termcard.css
+++ b/components/termcard.css
@@ -1,7 +1,7 @@
 /* This file solely exists for this animation */
 @keyframes slideInFromRight {
 from {
-    transform: translateX(150%);
+    transform: translateX(250%);
 }
 to {
     transform: translateX(0);
@@ -9,7 +9,8 @@ to {
 }
 
 .term-card {
-    transform: translateX(200%);
+    transform: translateX(250%);
     animation: slideInFromRight .3s ease-out forwards;
+    overflow: hidden;
     /* animation-delay: var(--animation-delay, 0s); */
 }
